[gd_scene load_steps=24 format=3 uid="uid://dnfo43860lrfo"]

[ext_resource type="Script" path="res://mapa.gd" id="1_ohn6x"]
[ext_resource type="Texture2D" uid="uid://b6ottelxl0baq" path="res://Map.png" id="1_q8hht"]
[ext_resource type="PackedScene" uid="uid://bdmn4ygvsyve6" path="res://Player.tscn" id="2_p5w5v"]
[ext_resource type="Texture2D" uid="uid://ddhq1a5ppl31j" path="res://mapaJefe.png" id="3_7sypr"]
[ext_resource type="Script" path="res://dinero.gd" id="5_ig51y"]
[ext_resource type="Script" path="res://oleada.gd" id="6_v2he3"]
[ext_resource type="Script" path="res://pasar_oleada.gd" id="7_o4gid"]
[ext_resource type="Script" path="res://btn_si.gd" id="8_5vmv7"]
[ext_resource type="Texture2D" uid="uid://dyffxkswolfs1" path="res://tekstuur.png" id="9_kqkao"]
[ext_resource type="Script" path="res://btn_no.gd" id="9_sisyt"]
[ext_resource type="Texture2D" uid="uid://qumd5veu557" path="res://window.png" id="10_o2mjk"]
[ext_resource type="Texture2D" uid="uid://coq11kh417cl2" path="res://icono_dinero.png" id="13_4lldu"]
[ext_resource type="Texture2D" uid="uid://c041dgflqnbx6" path="res://life.png" id="14_3wr34"]
[ext_resource type="PackedScene" uid="uid://2an2d6mpjn61" path="res://plataforma.tscn" id="15_f6k1j"]
[ext_resource type="Texture2D" uid="uid://dcodm61omacvt" path="res://timer-sand.png" id="15_il1lf"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yfmeu"]
texture = ExtResource("1_q8hht")
texture_region_size = Vector2i(64, 64)
2:0/0 = 0
3:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
15:0/0 = 0
2:1/0 = 0
3:1/0 = 0
6:1/0 = 0
7:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
2:2/0 = 0
3:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
2:3/0 = 0
3:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
8:1/0 = 0
1:0/0 = 0
0:0/0 = 0
4:0/0 = 0
5:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mfqnu"]
texture = ExtResource("3_7sypr")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0

[sub_resource type="TileSet" id="TileSet_0mcme"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_yfmeu")
sources/1 = SubResource("TileSetAtlasSource_mfqnu")

[sub_resource type="Curve2D" id="Curve2D_flv83"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -752, 430, 0, 0, 0, 0, -754, 332, 0, 0, 0, 0, -171, 325, 0, 0, 0, 0, -173, 26, 0, 0, 0, 0, -323, 24, 0, 0, 0, 0, -324, 49, 0, 0, 0, 0, -498, 51, 0, 0, 0, 0, -823, 47, 0, 0, 0, 0, -826, -120, 0, 0, 0, 0, -827, -138)
}
point_count = 10

[sub_resource type="SegmentShape2D" id="SegmentShape2D_n7064"]
a = Vector2(1, -108.5)
b = Vector2(771, -101.5)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_c53cn"]
a = Vector2(1, -117.5)
b = Vector2(1, 471.5)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_dk3es"]
a = Vector2(-9, 472.5)
b = Vector2(771, 469.5)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_jk6ri"]
a = Vector2(770, -126.5)
b = Vector2(773, 473.5)

[node name="Base" type="Node2D"]
position = Vector2(-4, -7)
script = ExtResource("1_ohn6x")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-4, 5)
tile_set = SubResource("TileSet_0mcme")
format = 2
layer_0/tile_data = PackedInt32Array(-65542, 1, 1, -6, 1, 2, 65530, 1, 3, 131066, 1, 4, 196602, 1, 5, 262138, 1, 6, 327674, 1, 7, 393210, 1, 8, -65541, 65537, 1, -5, 65537, 2, 65531, 65537, 3, 131067, 65537, 4, 196603, 65537, 5, 262139, 65537, 6, 327675, 65537, 7, 393211, 65537, 8, -65540, 131073, 1, -4, 131073, 2, 65532, 131073, 3, 131068, 131073, 4, 196604, 131073, 5, 262140, 131073, 6, 327676, 131073, 7, 393212, 131073, 8, -65539, 196609, 1, -3, 196609, 2, 65533, 196609, 3, 131069, 196609, 4, 196605, 196609, 5, 262141, 196609, 6, 327677, 196609, 7, 393213, 196609, 8, -131078, 1, 0, -131077, 65537, 0, -131076, 131073, 0, -131075, 196609, 0, -131074, 262145, 0, -65538, 262145, 1, -2, 262145, 2, 65534, 262145, 3, 131070, 262145, 4, 196606, 262145, 5, 262142, 262145, 6, 327678, 262145, 7, 393214, 262145, 8, -131073, 327681, 0, -65537, 327681, 1, -1, 327681, 2, 65535, 327681, 3, 131071, 327681, 4, 196607, 327681, 5, 262143, 327681, 6, 327679, 327681, 7, 393215, 327681, 8, -196608, 393217, 0, -131072, 393217, 1, -65536, 393217, 2, 0, 393217, 3, 65536, 393217, 4, 131072, 393217, 5, 196608, 393217, 6, 262144, 393217, 7, 327680, 393217, 8, -196607, 458753, 0, -131071, 458753, 1, -65535, 458753, 2, 1, 458753, 3, 65537, 458753, 4, 131073, 458753, 5, 196609, 458753, 6, 262145, 458753, 7, 327681, 458753, 8, -196606, 524289, 0, -131070, 524289, 1, -65534, 524289, 2, 2, 524289, 3, 65538, 524289, 4, 131074, 524289, 5, 196610, 524289, 6, 262146, 524289, 7, 327682, 524289, 8, -196605, 589825, 0, -131069, 589825, 1, -65533, 589825, 2, 3, 589825, 3, 65539, 589825, 4, 131075, 589825, 5, 196611, 589825, 6, 262147, 589825, 7, 327683, 589825, 8, -196604, 655361, 0, -131068, 655361, 1, -65532, 655361, 2, 4, 655361, 3, 65540, 655361, 4, 131076, 655361, 5, 196612, 655361, 6, 262148, 655361, 7, 327684, 655361, 8, -196603, 720897, 0, -131067, 720897, 1, -65531, 720897, 2, 5, 720897, 3, 65541, 720897, 4, 131077, 720897, 5, 196613, 720897, 6, 262149, 720897, 7, 327685, 720897, 8)

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(517, -55)
curve = SubResource("Curve2D_flv83")

[node name="next_wave" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="Spawn_Enemigo" type="Timer" parent="."]
autostart = true

[node name="Player" parent="." instance=ExtResource("2_p5w5v")]
position = Vector2(23, 79)

[node name="container_next_wave" type="GridContainer" parent="."]
offset_left = -262.0
offset_top = -359.0
offset_right = 247.0
offset_bottom = -247.0

[node name="pasar_oleada" type="Label" parent="container_next_wave"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Â¿Desea pasar a la siguiente oleada?"
script = ExtResource("7_o4gid")

[node name="btn_si" type="Button" parent="container_next_wave"]
layout_mode = 2
text = "Si"
script = ExtResource("8_5vmv7")

[node name="btn_no" type="Button" parent="container_next_wave"]
layout_mode = 2
text = "No
"
script = ExtResource("9_sisyt")

[node name="Final" type="Area2D" parent="."]
position = Vector2(-825, -129)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Final"]
position = Vector2(515, -15)
polygon = PackedVector2Array(-35, -57, 25, -56, 25, -41, -35, -43)

[node name="Plataforma" parent="." instance=ExtResource("15_f6k1j")]
position = Vector2(-99, 210)

[node name="Plataforma2" parent="." instance=ExtResource("15_f6k1j")]
position = Vector2(264, 25)

[node name="Plataforma3" parent="." instance=ExtResource("15_f6k1j")]
position = Vector2(260, 201)

[node name="Plataforma4" parent="." instance=ExtResource("15_f6k1j")]
position = Vector2(-239, -89)

[node name="Plataforma5" parent="." instance=ExtResource("15_f6k1j")]
position = Vector2(13, -66)

[node name="Tekstuur" type="Sprite2D" parent="."]
position = Vector2(-531, 68)
scale = Vector2(0.286, 0.230667)
texture = ExtResource("9_kqkao")

[node name="Window" type="Sprite2D" parent="Tekstuur"]
position = Vector2(0, 152.135)
scale = Vector2(2.03804, 1.33452)
texture = ExtResource("10_o2mjk")

[node name="IconoDinero" type="Sprite2D" parent="Tekstuur"]
position = Vector2(-284.965, -210.898)
scale = Vector2(0.341455, 0.249034)
texture = ExtResource("13_4lldu")

[node name="Oleada" type="Label" parent="Tekstuur"]
top_level = true
offset_left = -627.0
offset_top = 22.0
offset_right = -513.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 20
text = "Oleada:"
max_lines_visible = 10
script = ExtResource("6_v2he3")

[node name="Dinero" type="Label" parent="Tekstuur"]
top_level = true
offset_left = -607.0
offset_top = -1.0
offset_right = -493.0
offset_bottom = 41.0
theme_override_font_sizes/font_size = 20
text = "100"
max_lines_visible = 10
script = ExtResource("5_ig51y")

[node name="Vida" type="Label" parent="Tekstuur"]
offset_left = -314.678
offset_top = -30.3468
offset_right = 209.322
offset_bottom = 38.6532
theme_override_font_sizes/font_size = 50
text = "Vida
"

[node name="HBoxContainer" type="HBoxContainer" parent="Tekstuur"]
offset_left = -318.182
offset_top = 73.6994
offset_right = 363.818
offset_bottom = 133.699

[node name="Vida_1" type="TextureRect" parent="Tekstuur/HBoxContainer"]
layout_mode = 2
texture = ExtResource("14_3wr34")
expand_mode = 2
stretch_mode = 4

[node name="Vida_2" type="TextureRect" parent="Tekstuur/HBoxContainer"]
layout_mode = 2
texture = ExtResource("14_3wr34")
expand_mode = 2
stretch_mode = 4

[node name="Vida_3" type="TextureRect" parent="Tekstuur/HBoxContainer"]
layout_mode = 2
texture = ExtResource("14_3wr34")
expand_mode = 2
stretch_mode = 4

[node name="Vida_4" type="TextureRect" parent="Tekstuur/HBoxContainer"]
layout_mode = 2
texture = ExtResource("14_3wr34")
expand_mode = 2
stretch_mode = 4

[node name="Vida_5" type="TextureRect" parent="Tekstuur/HBoxContainer"]
layout_mode = 2
texture = ExtResource("14_3wr34")
expand_mode = 2
stretch_mode = 4

[node name="Vida_6" type="TextureRect" parent="Tekstuur/HBoxContainer"]
layout_mode = 2
texture = ExtResource("14_3wr34")
expand_mode = 2
stretch_mode = 4

[node name="Vida_7" type="TextureRect" parent="Tekstuur/HBoxContainer"]
layout_mode = 2
texture = ExtResource("14_3wr34")
expand_mode = 2
stretch_mode = 4

[node name="Vida_8" type="TextureRect" parent="Tekstuur/HBoxContainer"]
layout_mode = 2
texture = ExtResource("14_3wr34")
expand_mode = 2
stretch_mode = 4

[node name="Vida_9" type="TextureRect" parent="Tekstuur/HBoxContainer"]
layout_mode = 2
texture = ExtResource("14_3wr34")
expand_mode = 2
stretch_mode = 4

[node name="Vida_10" type="TextureRect" parent="Tekstuur/HBoxContainer"]
layout_mode = 2
texture = ExtResource("14_3wr34")
expand_mode = 2
stretch_mode = 4

[node name="timer_oleada" type="Label" parent="Tekstuur"]
offset_left = -231.461
offset_top = 199.422
offset_right = 69.5393
offset_bottom = 268.422
theme_override_font_sizes/font_size = 50
text = "30 segundos"
metadata/_edit_use_anchors_ = true

[node name="Timer-sand" type="Sprite2D" parent="Tekstuur"]
position = Vector2(-276.727, 235.881)
scale = Vector2(-0.2146, 0.231173)
texture = ExtResource("15_il1lf")

[node name="Muro1" type="StaticBody2D" parent="."]
position = Vector2(-385, -184)
collision_layer = 2

[node name="Muro_norte" type="CollisionShape2D" parent="Muro1"]
visibility_layer = 2
position = Vector2(-4, 102.5)
shape = SubResource("SegmentShape2D_n7064")
one_way_collision_margin = 2.0
debug_color = Color(0, 0.603715, 0.678071, 0.42)

[node name="Muro2" type="StaticBody2D" parent="."]
position = Vector2(-385, -184)
collision_layer = 2

[node name="Muro_oeste" type="CollisionShape2D" parent="Muro2"]
visibility_layer = 2
position = Vector2(-4, 102.5)
shape = SubResource("SegmentShape2D_c53cn")
one_way_collision_margin = 2.0
debug_color = Color(0, 0.603715, 0.678071, 0.42)

[node name="Muro3" type="StaticBody2D" parent="."]
position = Vector2(-385, -184)
collision_layer = 2

[node name="Muro_sur" type="CollisionShape2D" parent="Muro3"]
visibility_layer = 2
position = Vector2(-4, 102.5)
shape = SubResource("SegmentShape2D_dk3es")
one_way_collision_margin = 2.0
debug_color = Color(0, 0.603715, 0.678071, 0.42)

[node name="Muro4" type="StaticBody2D" parent="."]
position = Vector2(-385, -184)
collision_layer = 2

[node name="Muro_este" type="CollisionShape2D" parent="Muro4"]
visibility_layer = 2
position = Vector2(-4, 102.5)
shape = SubResource("SegmentShape2D_jk6ri")
one_way_collision_margin = 2.0
debug_color = Color(0, 0.603715, 0.678071, 0.42)

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="timeout" from="next_wave" to="." method="_on_spawn_enemigo_timeout"]
[connection signal="timeout" from="next_wave" to="." method="_on_next_wave_timeout"]
[connection signal="timeout" from="Spawn_Enemigo" to="." method="_on_spawn_enemigo_timeout"]
[connection signal="pressed" from="container_next_wave/btn_si" to="." method="_on_btn_si_pressed"]
[connection signal="pressed" from="container_next_wave/btn_no" to="." method="_on_btn_no_pressed"]
[connection signal="area_entered" from="Final" to="." method="_on_final_area_entered"]
[connection signal="body_entered" from="Final" to="." method="_on_area_2d_body_entered"]
